Footer spacing on phone fix

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -160,6 +160,13 @@ p.large
   .bottom-footer
     background-color: black
 
+    .crossfit-journal,   .crossfit-logo
+      margin-right: 20px
+
+    .my-info
+      font-size: 13px
+
+
 /* Global */
 .ui.grid.page-grid
   padding-bottom: 2em
